2004-01-21  Miguel de Icaza  <miguel@ximian.com>

	* ecore.cs (FieldInfo.AddressOf): Revert patch from previous
	#52730 bug, and instead compute correctly the need to use a
	temporary variable when requesting an address based on the
	static/instace modified of the field and the constructor.
 
2004-01-21  Martin Baulig  <martin@ximian.com>

	* ecore.cs (SimpleName.ResolveAsTypeStep): Lookup in the current
	class and namespace before looking up aliases.  Fixes #52517.

2004-01-21  Martin Baulig  <martin@ximian.com>

	* flowanalysis.cs (UsageVector.Merge): Allow variables being
	assinged in a 'try'; fixes exception4.cs.

2004-01-21  Marek Safar  <marek.safar@seznam.cz>
        * class.cs : Implemented parameter-less constructor for TypeContainer
        
        * decl.cs: Attributes are now stored here. New property OptAttributes
        
        * delegate.cs, enum.cs, interface.cs: Removed attribute member.
        
        * rootcontext.cs, tree.cs: Now use parameter-less constructor of TypeContainer

2004-01-21  Marek Safar  <marek.safar@seznam.cz>

	* typemanager.cs (CSharpSignature): Now reports also inner class name.
          (CSharpSignature): New method for indexer and property signature.

2004-01-21  Marek Safar  <marek.safar@seznam.cz>

	* pending.cs (IsVirtualFilter): Faster implementation.

2004-01-21  Marek Safar  <marek.safar@seznam.cz>

	* typemanager.cs: Avoid inclusion of same assembly more than once.

2004-01-21  Marek Safar  <marek.safar@seznam.cz>

	* cs-parser.jay: Fixed problem where the last assembly attribute
          has been applied also to following declaration (class, struct, etc.)
          
2004-01-21  Marek Safar  <marek.safar@seznam.cz>

	* class.cs: Added error CS0538, CS0539 reporting.
        Fixed crash on Microsoft runtime when field type is void.

	* cs-parser.jay: Added error CS0537 reporting.

	* pending.cs: Added error CS0535 reporting.
        Improved error report for errors CS0536, CS0534.
