@@ -1,3 +1,8 @@
+2004-01-22  Martin Baulig  <martin@ximian.com>
+
+	* namespace.cs (NamespaceEntry.UsingAlias): Take an Expression,
+	not a string as alias name.
+
 2004-01-21  Miguel de Icaza  <miguel@ximian.com>
 
 	* ecore.cs (FieldInfo.AddressOf): Revert patch from previous
